--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "root",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": "true",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/withstorefront/storefront"
+  },
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -14,9 +17,6 @@
     "lint": "turbo lint",
     "release": "turbo run build lint && changeset version && changeset publish"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
