--- a/packages/storefront/package.json
+++ b/packages/storefront/package.json
@@ -12,15 +12,8 @@
   "homepage": "https://github.com/withstorefront/storefront",
   "type": "module",
   "author": "withstorefront",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.mjs",
-  "types": "./dist/types/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/cjs/index.js",
-      "import": "./dist/esm/index.mjs"
-    }
-  },
+  "main": "./dist/index.js",
+  "types": "./types.d.ts",
   "files": [
     "dist"
   ],
@@ -31,14 +24,14 @@
     "ecommerce"
   ],
   "scripts": {
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "tsc -p tsconfig.esm.json && npm run rename:esm",
-    "build": "npm run build:cjs && npm run build:esm",
+    "build": "npm run clean && tsc",
     "clean": "rimraf dist",
-    "rename:esm": "/bin/zsh ./scripts/fix-mjs.sh",
+    "lint": "eslint . --fix",
     "prepack": "npm run clean && npm run build"
   },
   "devDependencies": {
+    "eslint-config": "^1.0.0",
+    "prettier-config": "^1.0.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.6.2"
   }
