--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,14 +19,18 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
+    "@withstorefront/astro": "^0.1.0",
+    "@withstorefront/shopify": "^0.1.0",
     "eslint-config": "^1.0.0",
     "eslint-plugin-astro": "^1.2.4",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "globals": "^15.10.0",
     "postcss-html": "^1.5.0",
     "prettier-config": "^1.0.0",
     "prettier-plugin-astro": "^0.14.1",
     "semantic-release-monorepo": "^8.0.2",
     "stylelint-config": "^1.0.0",
-    "stylelint-config-html": "^1.1.0"
+    "stylelint-config-html": "^1.1.0",
+    "vite": "^5.4.8"
   }
 }
