feat: :sparkles: adds the core Shopify GraphQL functionality

--- a/packages/shopify/package.json
+++ b/packages/shopify/package.json
@@ -27,9 +27,14 @@
     "build": "npm run clean && tsc",
     "clean": "rimraf dist",
     "lint": "eslint . --fix",
+    "graphql-codegen": "graphql-codegen",
     "prepack": "npm run clean && npm run build"
   },
   "dependencies": {
     "@withstorefront/storefront": "^0.1.0"
+  },
+  "devDependencies": {
+    "@shopify/api-codegen-preset": "^1.1.1",
+    "@shopify/storefront-api-client": "^1.0.2"
   }
 }
