--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-astro": "^1.2.4",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "globals": "^15.10.0",
+    "phosphor-astro": "^2.1.0",
     "postcss-html": "^1.5.0",
     "prettier-config": "^1.0.0",
     "prettier-plugin-astro": "^0.14.1",
