chore: :hammer: hooks up VS Code debugging for the Storefront packages and Astro demo site

--- a/packages/storefront/package.json
+++ b/packages/storefront/package.json
@@ -24,6 +24,7 @@
     "ecommerce"
   ],
   "scripts": {
+    "dev": "npm run clean && tsc --watch",
     "build": "npm run clean && tsc",
     "clean": "rimraf dist",
     "lint": "eslint . --fix",
