feat: 🚧 adds support for parsing product filters in Shopify

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,10 @@
     },
     {
       "name": "Libraries",
-      "type": "node",
+      "type": "node-terminal",
       "request": "launch",
       "cwd": "${workspaceFolder}",
-      "runtimeExecutable": "npm",
-      "runtimeArgs": ["run-script", "dev"]
+      "command": "npm run dev"
     }
   ],
   "compounds": [
